# color_palette_creator

./: pyproject.toml  readme.md
basic_generator/: get_colours.py  get_figure.py  main.py
cmap_generator/: cmap_functions.py  cmap_visualize.py  main.py
src/color_palette_creator/: __init__.py  colour_modules.py  get_figures.py
src/color_palette_creator/tests/: tests.py
